# flutter-buildgradle-analysis

./: pyproject.toml
flutter_github/: __init__.py
