[tool.poetry]
name = "flutter-github"
version = "0.1.0"
description = ""
authors = ["Enzo Santos <enzo.santos29@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
marko = "^2.0.1"
requests = "^2.31.0"
petitparser = "^0.1.2"

[tool.poetry.scripts]
"main" = "flutter_github:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
black = "^23.11.0"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
